# paul-bot

./: .dockerignore  .env.example  CONTRIBUTING.md  Dockerfile  Procfile  README.md  bot.py  database_bot.py  errors.py  fly.toml  friendly_error.py  main.py  make-space.md  mention.py  paul.py  pyproject.toml  readable_mapping.py  requirements.txt  utils.py
.github/: FUNDING.yml
application/: __init__.py  option.py  poll.py
data/: __init__.py  cruds.py  options_crud.py  polls_crud.py  schema.psql  votes_crud.py
data/migrations/: 1_archive_options.psql  1_archive_options.sql
data/sql/: select.py  update.py
docs/: development-overview.md
paul_bot/: __init__.py  __main__.py  main.py  utils.py
paul_bot/application/: __init__.py  mention.py  option.py  poll.py
paul_bot/data/: __init__.py  cruds.py  options_crud.py  polls_crud.py  schema.psql  votes_crud.py
paul_bot/data/sql/: __init__.py  delete.py  insert.py  select.py  update.py  util.py
paul_bot/presentation/: close_loop.py  close_queue.py  command_params.py  converters.py  errors.py  paul.py
paul_bot/presentation/embeds/: __init__.py  colours.py  poll_closed_embed.py  poll_embed.py  poll_embed_base.py  question_results_embed.py  see_option_results_embed.py
paul_bot/presentation/ui/: __init__.py  add_option_button.py  add_option_input.py  add_option_modal.py  close_poll_button.py  poll_action_button.py  poll_buttons.py  poll_view.py  see_votes_button.py  util.py  vote_button.py
paul_bot/presentation/ui/buttons/: __init__.py  add_option_button.py  base_button.py  close_poll_button.py  see_votes_button.py  vote_button.py
poll/: __init__.py  command.py  converters.py  option.py  poll.py  poll_embed.py  poll_embeds.py
poll/embeds/: colours.py  poll_closed_embed.py  poll_embed.py  poll_embed_base.py  see_option_results_embed.py
poll/ui/: __init__.py  add_option_button.py  close_poll_button.py  poll_action_button.py  poll_view.py  see_votes_button.py  util.py  vote_button.py  vote_view.py
presentation/: command_params.py  converters.py  discord_channel_handler.py  errors.py  main.py  paul.py
presentation/embeds/: __init__.py  poll_closed_embed.py  poll_embed.py  poll_embed_base.py  question_results_embed.py  see_option_results_embed.py
presentation/ui/: __init__.py  add_option_button.py  archive_option_button.py  close_poll_button.py  poll_action_button.py  poll_view.py  see_votes_button.py  util.py  vote_button.py
sql/: __init__.py  delete.py  insert.py  select.py  util.py
