[tool.poetry]
name = "paul-bot"
version = "0.1.1"
description = ""
authors = ["Abraham Murciano <abrahammurciano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
disnake = "^2.4"
asyncpg = "^0.27"
dateparser = "^1.1"
discord-lumberjack = "^1.0"
python-dotenv = "^0.19"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]
types-pytz = "^2021.3"
types-dateparser = "^1.1.2"
black = "^22.3.0"

[tool.poetry.scripts]
paul = "paul_bot.main:_main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
