[project]
name = "paul-bot"
version = "0.2.0"
description = ""
authors = [{ name = "Abraham Murciano", email = "abrahammurciano@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
	"disnake>=2.4",
	"asyncpg>=0.27",
	"dateparser>=1.1",
	"discord-lumberjack>=1.0",
	"python-dotenv>=0.19",
	"psutil>=6.1.1",
	"typed-data-structures>=0.0.2",
]

[project.scripts]
paul = "paul_bot.main:_main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "types-dateparser>=1.2.0",
    "types-psutil>=6.1.0.20241221",
]

[[tool.mypy.overrides]]
module = ["asyncpg"]
ignore_missing_imports = true
